Refactor HttpStatus Helper, Create subcategory and category controller
