# storage/api-docs/api-docs.json
@@ -267,7 +267,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "$ref": "#/components/schemas/Post"
                             }
@@ -443,7 +443,8 @@
                     "body",
                     "image",
                     "category_id",
-                    "user_id"
+                    "user_id",
+                    "sub_category_id"
                 ],
                 "properties": {
                     "title": {
@@ -473,6 +474,11 @@
                     },
                     "user_id": {
                         "description": "User ID",
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "sub_category_id": {
+                        "description": "Sub Category ID",
                         "type": "string",
                         "format": "string"
                     }
